Modificações no views e controller
Views:
-Criação de mascara no campo dataNascimento
-Salvar agora passa o hashmap
Controller:
-Criação dos objetos utilizando as Strings recebidas da view no hashmap

--- a/src/views/Acolhimento.form
+++ b/src/views/Acolhimento.form
@@ -289,6 +289,9 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="campoDataNascimentoActionPerformed"/>
             <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="campoDataNascimentoKeyTyped"/>
           </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JFormattedTextField()"/>
+          </AuxValues>
         </Component>
         <Component class="javax.swing.JLabel" name="labelNaturalidade">
           <Properties>
