--- a/src/views/Acolhimento.form
+++ b/src/views/Acolhimento.form
@@ -30,7 +30,7 @@
                   <Component id="panelOrigemEncaminhamento" alignment="0" max="32767" attributes="0"/>
                   <Component id="panelInformacoesPaciente" alignment="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="panelInformacoesProfissionaisPaciente" min="-2" max="-2" attributes="0"/>
                   <Group type="102" attributes="0">
@@ -43,7 +43,7 @@
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace min="83" pref="21" max="32767" attributes="0"/>
+              <EmptySpace min="83" pref="336" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -469,26 +469,31 @@
                                   <Component id="labelOrigemEncaminhamento" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="checkINSS" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Component id="checkSindicato" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Component id="checkServMedicoPart" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Group type="102" alignment="1" attributes="0">
+                                  <Group type="103" groupAlignment="1" attributes="0">
+                                      <Component id="campoMunicipioUnidadeOUOutro" alignment="0" max="32767" attributes="0"/>
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="checkINSS" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              <Component id="checkSindicato" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              <Component id="checkServMedicoPart" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace max="32767" attributes="0"/>
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="checkMunicipio" min="-2" max="-2" attributes="0"/>
+                                              <Component id="checkUnidade" min="-2" max="-2" attributes="0"/>
+                                              <Component id="checkSUS" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="checkOutro" min="-2" max="-2" attributes="0"/>
+                                              <Component id="checkSem" min="-2" max="-2" attributes="0"/>
+                                              <Component id="checkEmpresa" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                      </Group>
                                   </Group>
-                                  <EmptySpace max="32767" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="checkMunicipio" min="-2" max="-2" attributes="0"/>
-                                      <Component id="checkUnidade" min="-2" max="-2" attributes="0"/>
-                                      <Component id="checkSUS" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="checkSem" min="-2" max="-2" attributes="0"/>
-                                      <Component id="checkEmpresa" min="-2" max="-2" attributes="0"/>
-                                      <Component id="checkOutro" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  </Group>
+                                  <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="campoMunicipioUnidadeOUOutro" alignment="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -504,32 +509,27 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="checkINSS" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="checkEmpresa" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="checkSindicato" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                                  <Component id="checkSem" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
+                          <Component id="checkINSS" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="checkOutro" min="-2" max="-2" attributes="0"/>
-                              <Component id="checkServMedicoPart" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="checkSindicato" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                          <Component id="checkServMedicoPart" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="checkSUS" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="checkSUS" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="checkEmpresa" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
                           <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                          <Component id="checkMunicipio" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="checkMunicipio" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="checkSem" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="checkUnidade" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="checkUnidade" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="checkOutro" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
