--- a/src/views/PesquisaOcupacao.form
+++ b/src/views/PesquisaOcupacao.form
@@ -83,6 +83,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="campoPesquisarProfissao">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="campoPesquisarProfissaoActionPerformed"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JPanel" name="panelBotoes">
 
@@ -118,6 +121,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Pesquisar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoPesquisarProfissaoActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="botaoSelecionarProfissao">
               <Properties>
